# backend/router/auth/route.go
@@ -1,8 +1,6 @@
 package auth
 
 import (
-	"google-devjam-backend/utils/middleware"
-
 	"github.com/labstack/echo/v4"
 )
 
@@ -11,5 +9,4 @@ func InitRoutes(e *echo.Echo) {
 
 	auth.POST("/register", Register)
 	auth.POST("/login", Login)
-	auth.GET("/me", Me, middleware.JWTMiddleware())
 }
